--- a/android/signin/app/src/main/res/layout/activity_main.xml
+++ b/android/signin/app/src/main/res/layout/activity_main.xml
@@ -5,8 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/blue_grey_700"
     android:orientation="vertical"
-    android:weightSum="4"
-    tools:context=".legacy.MainActivity">
+    android:weightSum="4">
 
     <LinearLayout
         android:layout_width="match_parent"
